style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Epilogue', sans-serif;
    height: 100vh;
    width: 100vw;
    background-color: hsl(0, 7%, 92%);
}

/* NAVBAR STYLING */

.navigation__logo {
    height: 30px;
    margin-right: 25px;
    cursor: pointer;
}

.navigation__links--1,
.navigation__links--2 {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 10px 30px;
    font-size: 14px;
}

.navigation__links--2 {
    margin-left: auto;
}

.link {
    cursor: pointer;
    color: hsl(0, 0%, 41%);
}

.link:hover {
    color: hsl(0, 0%, 8%);
}

.icon {
    display: flex;
    padding: 7px;
}

#btn {
    font-weight: 700;
    border: 2px solid hsl(0, 0%, 41%);
    border-radius: 10px;
    padding: 10px 30px;
    cursor: pointer;
}

#btn:hover {
    border: 2px solid hsl(0, 0%, 8%);
}

/* DROPDOWN STYLING  */

.dropdown {
    position: absolute;
    top: 60px;
    transform: translateX(-65px);
    width: 150px;
    border-radius: 10px;
    list-style-type: none;
    background-color: #fff;
    padding: 8px 0;
}

.dropdown__link {
    display: flex;
    align-items: center;
    padding: 2px 10px;
}

#company {
    width: 110px;
    transform: translateX(-20px);
}
#company > * {
    margin-left: 20px;  
    padding: 8px;
}

/* NAVBAR MOBILE STYLING  */

.navBar__mobile {
    position: absolute;
    display: flex;
    left: 100%;
    transform: translateX(-100%);
    height: 100%;
    background-color: blue;
    padding: 0 30px;
}

.navigation__mobile__links--1,
.navigation__mobile__links--2 {
    list-style-type: none;
}

#featuresLink__mobile,
#companyLink__mobile {
    display: flex
}

/* MAIN SECTION STYLING  */

/* LEFT SIDE */

main {
    display: flex; 
    padding: 0 100px;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
}

.container__text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

.container__text__heading {
    font-size: 80px;
    padding-right: 120px;
}

.container__text__text {
    font-size: 18px;
    line-height: 1.8;
    color: hsl(0, 0%, 41%);
    font-weight: 500;
    padding-right: 180px;
    margin: 40px 0;
}

.container__text__btn {
    align-self: flex-start;
    position: absolute;
    /* top: 65%; */
    transform: translateY(190px);
    background-color: hsl(0, 0%, 8%);
    color: hsl(0, 0%, 98%);
    font-weight: 700;
    font-size: 18px;
    border: none;
    border-radius: 15px;
    padding: 17px 30px;
    cursor: pointer;
}

.container__text__btn:hover {
    color: hsl(0, 0%, 8%);
    background-color: hsl(0, 0%, 98%);
    border: 1px solid hsl(0, 0%, 8%);
}

.container__sponsors {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.container__sponsors > *:not(:first-child) {
    margin-left: 35px;
}

/* RIGHT SIDE */

.hero-desktop__image {
    max-height: 650px;
}

.attribution { 
    font-size: 11px; text-align: center; 
    margin-top: 25px;
}

.attribution a { 
    color: hsl(228, 45%, 44%); 
}

/* RESPONSIVE STYLING  */

@media (max-width: 1330px) {
    .container__text__heading {
        font-size: 70px;
    }
}
@media (max-width: 1270px) {
    .container__text__heading {
        font-size: 60px;
    }
}
@media (max-width: 1200px) {
    .container__text__heading {
        font-size: 50px;
    }

    .container__text__text {
        font-size: 16px;
    }
}
@media (max-width: 1060px) {
    .hero-desktop__image {
        max-height: 550px;
        margin-left: 25px;
    }
}
@media (max-width: 1008px) {
    .hero-desktop__image {
        max-height: 450px;
        margin-left: 50px;
    }

    .container__text__btn {
        transform: translateY(155px);
    }
}

@media (max-width: 960px) {

    .hero-desktop__image {
        margin-left: 20px;
    }

    .container__text {
        width: 95%;
    }

    .container__text__heading {
        font-size: 45px;
        padding-right: 0;
    }
    
    .container__text__text {
        padding-right: 50px;
        margin: 30px 0;
    }
    
    .container__text__btn {
        transform: translateY(140px);
        font-size: 17px;
    }
}

@media (max-width: 930px) {

    main {
        margin-top: 70px;
    }

    .container__text {
        justify-content: flex-start;
    }

    .container__text__btn {
        transform: translateY(230px);
    }

    .hero-desktop__image {
        max-height: 350px;
        margin-left: 25px;
    }
}

@media (max-width: 920px) {
    main {
        margin: 0;
        padding: 0;
        flex-wrap: wrap-reverse;
        justify-content: center;
    }

    .hero-desktop {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .hero-desktop__image {
        margin: 0;
        max-height: 450px;
    }

    .container {
        margin: 10px 40px;
        align-self: center;
    }
    
    .container__text {
        padding: 0 20px;
        margin-left: 0;
        margin-top: 10px;
        margin-bottom: 80px;
        width: 100%;
    }

    .container__text__heading{
        text-align: center;
        padding: 0 10px;
        font-size: 40px;
        margin-bottom: 15px;
    }

    .container__text__text {
        padding: 0 150px;
        margin: 0;
        text-align: center;
    }
    
    .container__text__btn {
        transform: translate(-50%, 130px);
        left: 50%;
        font-size: 15px;
        padding: 14px 27px;
    }

    .container__sponsors {
        justify-content: center;
    }
}

.hidden {
    display: none;
}

@media (max-width: 919px) {
    .navBar  {
        display: none;
    }
}

